<resources>
    <string name="app_name">Device Spotter</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="track_your_phone">Track your phone</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="features">Features</string>
    <string name="secure_my_phone">Secure\nMy Phone</string>
    <string name="with_this_feature_you_can_remotely_lock_your_phone">Lock your phone\nremotely</string>
    <string name="with_this_feature_you_can_remotely_erase_your_phone">Erase your data\nremotely</string>
    <string name="with_this_feature_you_can_remotely_loc_your_phone">Locate your phone\nremotely</string>
    <string name="with_this_feature_you_can_remotely_alarm_your_phone">Ring your phone\nremotely</string>
    <string name="with_this_feature_you_can_remotely_send_your_phone">Send message to phone\nremotely</string>
    <string name="with_this_feature_you_can_remotely_backup_your_phone">Backup phone contacts\nremotely</string>
    <string name="with_this_feature_you_can_remotely_hide_your_phone">You can hide app icon</string>
    <string name="with_this_feature_you_can_remotely_family_your_phone">Locate your family\nmembers</string>
    <string name="with_this_feature_you_can_remotely_network_your_phone">Find mobile\nnetwork provider</string>
    <string name="secure">Secure</string>
    <string name="erase">Erase</string>
    <string name="erase_my_phone">Erase\nMy Phone</string>
    <string name="locate_my_phone">Locate\nMy Phone</string>
    <string name="alarm_my_phone">Ring\nMy Phone</string>
    <string name="send_my_phone">Send\na Message</string>
    <string name="locate">Locate</string>
    <string name="alarm">Ring</string>
    <string name="tools">Tools</string>
    <string name="torch">Torch</string>
    <string name="compass">Compass</string>
    <string name="private_browser">Private Browser</string>
    <string name="last_hope">Send</string>
    <string name="backup_and_restore"><![CDATA[Backup &\nRestore]]></string>
    <string name="view">View</string>
    <string name="family_locator">Family\nLocator</string>
    <string name="newtork_provider">Network\nProvider</string>
    <string name="find">Find</string>
    <string name="please_sign_in_for_live_tracking_finding_of_your_lost_phone">Please Sign in for live tracking/finding of your lost phone</string>
    <string name="sign_out">Sign Out</string>
    <string name="unable_to_sign_in">Unable to sign in. Please try again!</string>
    <string name="authenticating_user">Authenticating user....</string>
    <string name="authentication_failed">Authentication Failed!</string>
    <string name="loading">Loading..</string>
    <string name="error_occured_try_again">Some error occurred. Please try again!</string>
    <string name="gps_settings">GPS settings</string>
    <string name="do_you_want_to_go_to_setting">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="track_your_loc">Track your location</string>
    <string name="select_your_remote_device">Select your remote device</string>
    <string name="note_you_don_t_have_any_remote_device">Note: You don\'t have any remote device</string>
    <string name="you_must_sign_in_first">You must sign in first</string>
    <string name="to_secure_your_phone_please_click">To secure your phone please click</string>
    <string name="sign_in">Sign In</string>
    <string name="view_on_map">View on map</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="please_select_option">"Please select an option "</string>
    <string name="yes">Yes</string>
    <string name="track_location_in_background">You need to enable track your location to better track your lost phone location in background, if your location is changed.\n\n
    <b>Remember:</b><![CDATA[ Your location will be updated after every 2–3 minutes. Also, you need to enable your internet & GPS to get better result.]]></string>
    <string name="share_location_in_background">You need to enable share your location to better share your location in background to family member, if your location is changed.\n\n
    <b>Remember:</b><![CDATA[ Your location will be updated after every 1 minutes. Also, you need to enable your internet & GPS to get better result.]]></string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="activate_this">  To use this feature:\n\n
        1. You need to enable the device admin feature. \n\n
        2. Lock the device and erase data need this permission.\n\n
        3. If you don\'t activate this permission, these features might not work properly. \n\n
        4. So press \"OK\" to activate this feature.</string>
    <string name="admin_is_deactive">Admin is deactivated</string>
    <string name="admin_is_active">Admin is activated</string>
    <string name="lock_this_mobile">Lock this Mobile</string>
    <string name="lock_your_phone">Lock your phone</string>
    <string name="device_adminstration_permission">Device Administration Permission</string>
    <string name="deviceadminhelp">       **Following are the Main Working of application for which BIND_SERVICE_ADMIN \n \n
Permission is required** \n \n
-For the erasing of all the data of device.\n\n
-For changing the screen lock(Pin code , password lock) \n \n
-For Locking the screen \n \n
-Set password rules. (change password or pin of device) \n \n
        This application requires device administrator permission because: \n \n
1- If your phone is stolen or lost this app helps you reset your phone password. \n \n
2- It helps the user to wipe your data and reset your device to factory settings. \n \n
3- It helps the user to lock his/her remotely. \n \n
    4. It allow user to lock the phone and change the phone password set in the app.</string>
    <string name="locking_the_device">Locking the device</string>
    <string name="delete_data">Delete Data</string>
    <string name="delete_your_data">Delete your phone data</string>
    <string name="delete_erase_data">Do you want to erase data?</string>
    <string name="erasing_the_data">Erasing the data</string>
    <string name="ring_this_mobile">Ring this mobile</string>
    <string name="ring_silent_phone">Ring Silent Phone</string>
    <string name="ring_phone">Ring Phone</string>
    <string name="ringing_the_device">Ringing the device</string>
    <string name="the_ringtone_is_played_to_find_your_lost_phone_if_you_want_to_stop_this_sound_press_the_below_button">The ringtone is played to find your lost phone. If you want to stop this sound press the below button,</string>
    <string name="stop">Stop</string>
    <string name="play_ringtone">Play Ringtone</string>
    <string name="the_sound_is_played_because_someone_tries_to_enter_your_phone_press_bwlow_button_to_stop_the_sound">The sound is played because someone tries to enter your phone. Press below button to stop the sound.</string>
    <string name="send_message">Send Message</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="phone_no_to_be_contacted">Phone no to be contacted</string>
    <string name="custom_message">Custom Message</string>
    <string name="i_am_your_name_here_this_is_my_phone_please_call_me">I am_your name here_this is my phone. Please call me.</string>
    <string name="fill_the_field">Please fill the field</string>
    <string name="sending_message">Sending message..</string>
    <string name="contact_owner">Contact Owner</string>
    <string name="contact_number">Contact Number:</string>
    <string name="hide_app">Hide App</string>
    <string name="stealth_mode">Stealth Mode</string>
    <string name="hiding_the_icon">Hiding the icon..</string>
    <string name="no_compass_sensor">No compass sensor found.</string>
    <string name="error">Error!!</string>
    <string name="no_flash_light">Your device dosen\'t support torch!</string>
    <string name="battery_low_flash">Can\'t open torch because battery is low.</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="bookmark">Bookmark</string>
    <string name="view_bookmark_s">View Bookmark (s)</string>
    <string name="search_or_enter_url_address">Search or Enter url address</string>
    <string name="something_to_search">Please enter something to search</string>
    <string name="proceed">Proceed</string>
    <string name="no_url_to_book">No url to add bookmark</string>
    <string name="bookmark_already_exist">Bookmark already exist</string>
    <string name="added_success">Added Successfully</string>
    <string name="no_bookmark_found">No Bookmark(s) Found!</string>
    <string name="delete_this_bookmark">Do you want to delete this bookmark?</string>
    <string name="airport">Airport</string>
    <string name="atm">ATM</string>
    <string name="bus_stop">Bus Stop</string>
    <string name="hospital">Hospital</string>
    <string name="mosque">Mosque</string>
    <string name="school">School</string>
    <string name="police">Police</string>
    <string name="park">Park</string>
    <string name="gym">GYM</string>
    <string name="post_office">Post Office</string>
    <string name="bookshop">Book Shop</string>
    <string name="bank">Bank</string>
    <string name="enter_number">Enter Number</string>
    <string name="search">Search</string>
    <string name="install_map_app">Please install a maps application</string>
    <string name="fetching">Fetching..</string>
    <string name="network_p">Network Provider: </string>
    <string name="no_network_provider">No network provider found!</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="permission_message">You need to enable all these permission to use this app.</string>
    <string name="backup_destination">Backup Destination</string>
    <string name="email">Email</string>
    <string name="device_memory">Device Memory</string>
    <string name="select_restore_options">Select Restore Options</string>
    <string name="from_email">From Email</string>
    <string name="from_device_memory">From Device Memory</string>
    <string name="backuping_up_ct">Backing up contacts..</string>
    <string name="restoring_up_ct">Restoring contacts..</string>
    <string name="no_contacts_in_phone">No Contacts in Your Phone</string>
    <string name="contacts_success">Contacts Backup Successfully</string>
    <string name="contacts_success_r">Contacts Restore Successfully</string>
    <string name="go_to_gmail">Go to Gmail</string>
    <string name="saving_number">Saving number..</string>
    <string name="family_locator1">Family Locator</string>
    <string name="friends_requests">Family Requests</string>
    <string name="requests_status">Requests Status</string>
    <string name="add_a_new_member">Add a New Member</string>
    <string name="send">Send</string>
    <string name="sending_family_memeber_request">Sending request to family member..</string>
    <string name="fetch_request_list">Fetching Request List..</string>
    <string name="fetch_pending_list">Fetching Request Status..</string>
    <string name="fetch_family_list">Fetching Family List..</string>
    <string name="no_family_request_s_found">No family request(s) found!</string>
    <string name="no_family_pending_found">No pending request(s) found!</string>
    <string name="accept">Accept</string>
    <string name="pending">Pending</string>
    <string name="cancel_request">Cancelling the request..</string>
    <string name="accept_request">Accepting the request..</string>
</resources>