<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textLayout"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_contact_number"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12ssp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contactNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:hint="@string/phone_no_to_be_contacted"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/_12ssp"
            tools:targetApi="lollipop" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_message"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12ssp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customMessage1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:hint="@string/i_am_your_name_here_this_is_my_phone_please_call_me"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/_12ssp"
            tools:targetApi="lollipop" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/send"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="@dimen/_10sdp"
            app:elevation="@dimen/_10sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_12ssp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="@dimen/_10sdp"
            app:elevation="@dimen/_10sdp" />
    </RelativeLayout>
</RelativeLayout>
