<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".activities.PlayRingSilentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/the_ringtone_is_played_to_find_your_lost_phone_if_you_want_to_stop_this_sound_press_the_below_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/wrongPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/the_sound_is_played_because_someone_tries_to_enter_your_phone_press_bwlow_button_to_stop_the_sound"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stop"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_50ssp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/stop"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14ssp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="@dimen/_20sdp" />
    </LinearLayout>

    <include layout="@layout/banner" />
</LinearLayout>