<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.BackupRestoreFragment"
    tools:ignore="UselessParent">

    <include layout="@layout/main_header_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:overScrollMode="never"
        android:layout_weight="2"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/backupFile"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_140sdp"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/_5sdp"
                    android:clickable="true"

                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/_5sdp"
                            android:scaleType="centerInside"
                            android:src="@drawable/backup_file" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/_5sdp"
                            android:gravity="center"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/backup"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/restoreFile"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_140sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/_5sdp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_80sdp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/_5sdp"
                            android:scaleType="centerInside"
                            android:src="@drawable/restore_file" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/_5sdp"
                            android:gravity="center"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/restore"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/backupLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backup_destination"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <RadioGroup
                    android:id="@+id/radioBackup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/emailBackup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_12ssp" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/memoryBackup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/device_memory"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_12ssp" />
                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/backupBtn"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/backup"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp"
                    app:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/_10sdp"
                    app:elevation="@dimen/_10sdp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/restoreLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_restore_options"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <RadioGroup
                    android:id="@+id/radioRestore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/emailRestore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/from_email"

                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_12ssp" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/memoryRestore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/from_device_memory"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_12ssp" />
                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/restoreBtn"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/restore"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp"
                    app:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/_10sdp"
                    app:elevation="@dimen/_10sdp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <include layout="@layout/banner"/>
</LinearLayout>