<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_home"
        android:name="device.spotter.finder.appss.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_lostPhoneLocFragment"
            app:destination="@id/lostPhoneLocFragment" />
        <action
            android:id="@+id/action_nav_home_to_lockPhoneFragment"
            app:destination="@id/lockPhoneFragment" />
        <action
            android:id="@+id/action_nav_home_to_eraseDataFragment"
            app:destination="@id/eraseDataFragment" />
        <action
            android:id="@+id/action_nav_home_to_ringPhoneFragment"
            app:destination="@id/ringPhoneFragment" />
        <action
            android:id="@+id/action_nav_home_to_lastHopeFragment"
            app:destination="@id/lastHopeFragment" />
        <action
            android:id="@+id/action_nav_home_to_compassFragment"
            app:destination="@id/compassFragment" />
        <action
            android:id="@+id/action_nav_home_to_networkProviderFragment"
            app:destination="@id/networkProviderFragment" />
        <action
            android:id="@+id/action_nav_home_to_backupRestoreFragment"
            app:destination="@id/backupRestoreFragment" />
      
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="device.spotter.finder.appss.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_nearby"
        android:name="device.spotter.finder.appss.fragments.NearbyPlacesFragment"
        android:label="@string/nearby_places"
        tools:layout="@layout/fragment_nearby_places" />
    <fragment
        android:id="@+id/lostPhoneLocFragment"
        android:name="device.spotter.finder.appss.fragments.LostPhoneLocFragment"
        tools:layout="@layout/fragment_lost_phone_loc">
        <action
            android:id="@+id/action_lostPhoneLocFragment_to_mapViewFragment"
            app:destination="@id/mapViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapViewFragment"
        android:name="device.spotter.finder.appss.fragments.MapViewFragment"
        android:label="@string/view_on_map"
        tools:layout="@layout/fragment_map_view">
        <argument
            android:name="mapView"
            app:argType="device.spotter.finder.appss.models.MapView" />

    </fragment>
    <fragment
        android:id="@+id/lockPhoneFragment"
        android:name="device.spotter.finder.appss.fragments.LockPhoneFragment"
        tools:layout="@layout/fragment_lost_phone_loc">
        <argument
            android:name="isActivate"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/eraseDataFragment"
        android:name="device.spotter.finder.appss.fragments.EraseDataFragment"
        tools:layout="@layout/fragment_lost_phone_loc">
        <argument
            android:name="isActivate"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/ringPhoneFragment"
        android:name="device.spotter.finder.appss.fragments.RingPhoneFragment"
        tools:layout="@layout/fragment_lost_phone_loc" />
    <fragment
        android:id="@+id/lastHopeFragment"
        android:name="device.spotter.finder.appss.fragments.LastHopeFragment"
        tools:layout="@layout/fragment_lost_phone_loc" />
    <fragment
        android:id="@+id/hideAppFragment"
        android:name="device.spotter.finder.appss.fragments.HideAppFragment"
        tools:layout="@layout/fragment_lost_phone_loc" />
    <fragment
        android:id="@+id/compassFragment"
        android:name="device.spotter.finder.appss.fragments.CompassFragment"
        tools:layout="@layout/fragment_compass" />
    <fragment
        android:id="@+id/networkProviderFragment"
        android:name="device.spotter.finder.appss.fragments.NetworkProviderFragment"
        tools:layout="@layout/fragment_network_provider" />
    <fragment
        android:id="@+id/backupRestoreFragment"
        android:name="device.spotter.finder.appss.fragments.BackupRestoreFragment"
        tools:layout="@layout/fragment_backup_restore" />


</navigation>